[package]
name = "leftpad-str"
authors = ["abs0luty"]
version = "6.6.6"
edition = "2021"
license = "MIT"
description = "Obviously the best crate for the Rust programming language. The crate serves the only goal of implementing `leftpad` function."
repository = "https://github.com/abs0luty/leftpad"
documentation = "https://docs.rs/leftpad-str"
keywords = ["string", "left", "left-pad", "str"]
categories = ["string-formatting", "string-algorithms", "left-pad"]

[dependencies]
